--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -12,8 +12,8 @@
 }
 
 .contain2 {
-  background: rgba(48, 159, 226, 0.5);
-  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  background: rgba(9, 97, 211, 0.5);
+  box-shadow: 0 8px 32px 0 rgba(74, 133, 228, 0.37);
   backdrop-filter: blur(6px);
   -webkit-backdrop-filter: blur(6px);
   border-radius: 10px;
@@ -21,8 +21,8 @@
 }
 
 .contain3 {
-  background: rgba(48, 159, 226, 0.5);
-  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  background: rgba(16, 19, 187, 0.5);
+  box-shadow: 0 8px 32px 0 rgba(31, 69, 135, 0.37);
   backdrop-filter: blur(6px);
   -webkit-backdrop-filter: blur(6px);
   border-radius: 10px;
@@ -30,10 +30,21 @@
 }
 
 .contain4 {
-  background: rgba(35, 114, 163, 0.5);
-  box-shadow: 0 8px 32px 0 rgba(17, 22, 90, 0.37);
+  background: rgba(41, 35, 163, 0.5);
+  box-shadow: 0 8px 32px 0 rgba(4, 52, 110, 0.37);
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
+  border-radius: 10px;
+  border: 1px solid rgba(255, 255, 255, 0.18);
+}
+
+
+.contain-v1:hover {
+  background: rgba(255, 255, 255, 0.5);
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
   backdrop-filter: blur(6px);
   -webkit-backdrop-filter: blur(6px);
   border-radius: 10px;
   border: 1px solid rgba(255, 255, 255, 0.18);
+  transition-duration: 250ms;
 }
