--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,14 +15,24 @@
     --background-end-rgb: 0, 0, 0;
   }
 }
+.footer {
+  display: none;
+}
+
+@media (min-width: 992px) {
+  .footer {
+    display: block;
+    overflow: hidden;
+    width: 100%;
+  }
+}
 
 .contain {
-background: rgba( 48, 159, 226, 0.5 );
-box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
-backdrop-filter: blur( 6px );
--webkit-backdrop-filter: blur( 6px );
-border-radius: 10px;
-
+  background: rgba(48, 159, 226, 0.5);
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  backdrop-filter: blur(6px);
+  -webkit-backdrop-filter: blur(6px);
+  border-radius: 10px;
 }
 .contain2 {
   background: rgba(36, 111, 198, 0.65);
@@ -30,5 +40,4 @@ border-radius: 10px;
   backdrop-filter: blur(7px);
   -webkit-backdrop-filter: blur(7px);
   border-radius: 10px;
-  
 }
