--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -47,6 +47,15 @@
   border: 1px solid rgba(255, 255, 255, 0.18);
 }
 
+.contain6 {
+  background: rgba(17, 255, 17, 0.5);
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  backdrop-filter: blur(6px);
+  -webkit-backdrop-filter: blur(6px);
+  border-radius: 10px;
+  border: 1px solid rgba(255, 255, 255, 0.18);
+}
+
 
 .contain-v1:hover {
   background: rgba(255, 255, 255, 0.5);
