update and add AOS ANIMATED

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -67,6 +67,16 @@
   transition-duration: 250ms;
 }
 
+.contain-v2:active {
+  background: rgba(255, 255, 255, 0.5);
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  backdrop-filter: blur(6px);
+  -webkit-backdrop-filter: blur(6px);
+  border-radius: 10px;
+  border: 1px solid rgba(255, 255, 255, 0.18);
+  transition-duration: 250ms;
+}
+
 .bg-op-bluedark {
   background: rgba(6, 26, 82, 0.633);
 
