--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,7 +8,6 @@
   backdrop-filter: blur(7px);
   -webkit-backdrop-filter: blur(7px);
   border-radius: 10px;
-
 }
 .contain2 {
   background: rgba(255, 255, 255, 0.75);
@@ -16,5 +15,18 @@
   backdrop-filter: blur(7px);
   -webkit-backdrop-filter: blur(7px);
   border-radius: 10px;
-
+}
+.contain3 {
+  background: rgba(40, 84, 117, 0.75);
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  backdrop-filter: blur(7px);
+  -webkit-backdrop-filter: blur(7px);
+  border-radius: 10px;
+}
+.contain4 {
+  background: rgba(75, 99, 117, 0.75);
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  backdrop-filter: blur(7px);
+  -webkit-backdrop-filter: blur(7px);
+  border-radius: 10px;
 }
