--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -56,6 +56,23 @@
   border: 1px solid rgba(255, 255, 255, 0.18);
 }
 
+.contain7 {
+  background: rgba(48, 158, 226, 0.157);
+  box-shadow: 0 8px 32px 0 rgba(0, 0, 63, 0.37);
+  backdrop-filter: blur(6px);
+  -webkit-backdrop-filter: blur(6px);
+  border-radius: 10px;
+  border: 1px solid rgba(255, 255, 255, 0.18);
+}
+
+.contain8 {
+  background: rgba(48, 98, 226, 0.212);
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  backdrop-filter: blur(6px);
+  -webkit-backdrop-filter: blur(6px);
+  border-radius: 10px;
+  border: 1px solid rgba(255, 255, 255, 0.18);
+}
 
 .contain-v1:hover {
   background: rgba(255, 255, 255, 0.5);
@@ -77,12 +94,33 @@
   transition-duration: 250ms;
 }
 
+.contain-v3:hover {
+  background: rgba(255, 255, 255, 0.292);
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  backdrop-filter: blur(6px);
+  -webkit-backdrop-filter: blur(6px);
+  border-radius: 10px;
+  border: 1px solid rgba(255, 255, 255, 0.18);
+  transition-duration: 250ms;
+}
+
+.contain-v4:active {
+  background: rgba(119, 255, 196, 0.5);
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  backdrop-filter: blur(6px);
+  -webkit-backdrop-filter: blur(6px);
+  border-radius: 10px;
+  border: 1px solid rgba(255, 255, 255, 0.18);
+  transition-duration: 250ms;
+}
+
+
+
+
 .bg-op-bluedark {
   background: rgba(6, 26, 82, 0.633);
-
 }
 
 .bg-op-bluelight {
   background: rgba(135, 207, 255, 0.445);
-
 }
